--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,10 +5,6 @@
   right: -25%;
   z-index: 3;
 }
-.tea-cup-home-small {
-  width: 40%;
-  padding-top: 2rem;
-}
 .content {
   width: 75%;
 }
